@@ -29,6 +29,7 @@ Stalker Changes
   * Update: Combined ``project_create_dialog`` and ``project_update_dialog`` into one.
   * Fix: Updating a project now correctly refreshes the ``project_summary``
     content pane.
+  * Fix: ``user_create_dialog`` now shows and updates groups.
 * jQueryGantt:
   * Update: Replaced the ``duration`` column with ``timing`` which correctly
     shows the schedule timing info of the related task.
